--- a/Front/parcautoApp/src/app/ventes/ventes.component.html
+++ b/Front/parcautoApp/src/app/ventes/ventes.component.html
@@ -39,7 +39,7 @@
                     <td>{{ventes?.email}}</td>
                     <td>{{ventes?.date}}</td>
                     <td>
-                        <button type="button" class="btn btn-primary-rgba btn-sm" data-bs-toggle="modal" data-bs-target="#updateCarsModal" style="margin-right: 30px"><i class="bi bi-pencil"></i></button>
+                        <button type="button" (click)="onOpenModal(ventes, 'edit')" class="btn btn-primary-rgba btn-sm" data-bs-toggle="modal" data-bs-target="#updateVentesModal" style="margin-right: 30px"><i class="bi bi-pencil"></i></button>
                         <button type="button" (click)="onOpenModal(ventes, 'delete')" class="btn btn-success-rgba btn-sm" data-bs-toggle="modal" data-bs-target="#deleteVentesModal"><i class="bi bi-trash3"></i></button>
                     </td>
                 </tr>
@@ -51,45 +51,89 @@
 
 <!-- Add Ventes Modal -->
 <div class="modal fade" id="addVentesModal" tabindex="-1" role="dialog" aria-labelledby="addVentesModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="addVentesModalLabel">Nouvelle Voiture</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <form #addForm="ngForm" (ngSubmit)="onAddVentes(addForm)">
+                <div class="form-group">
+                  <select class="form-select" aria-label="Default select example" ngModel name="marque" id="marque">
+                    <option selected>Selectionner un marque</option>
+                    <option *ngFor="let cars of cars" value={{cars?.marque}}>{{cars?.marque}}</option>
+                  </select>
+              </div>
+              <div class="form-group">
+                  <label for="modele"></label>
+                  <select ngModel name="modele" id="modele" class="form-select" aria-label="Default select example">
+                    <option selected>Selectionner un marque</option>
+                    <option *ngFor="let cars of cars" value={{cars?.modele}}>{{cars?.modele}}</option>
+                  </select>
+              </div>
+              <div class="form-group">
+                  <label for="prix"></label>
+                  <input type="select" ngModel name="prix" class="form-control" id="prix" placeholder="Prix" required>
+              </div>
+              <div class="form-group">
+                  <label for="nom"></label>
+                  <input type="text" ngModel name="nom" class="form-control" id="nom" placeholder="Nom" required>
+              </div>
+              <div class="form-group">
+                  <label for="prenom"></label>
+                  <input type="text" ngModel name="prenom" class="form-control" id="prenom" placeholder="Prenom" required>
+              </div>
+              <div class="form-group">
+                  <label for="phone"></label>
+                  <input type="text" ngModel name="phone" class="form-control" id="phone" placeholder="Phone" required>
+              </div>
+              <div class="form-group">
+                  <label for="email"></label>
+                  <input type="email" ngModel name="email" class="form-control" id="email" placeholder="Email" required>
+              </div>
+                  <div class="modal-footer">
+                      <button type="button" id="add-ventes-form" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Annuler</button>
+                      <button [disabled]="addForm.invalid" type="submit" class="btn btn-success btn-sm">Valider</button>
+                  </div>
+              </form>
+          </div>
+      </div>
+  </div>
+</div>
+
+
+<!-- Edit Modal -->
+<div class="modal fade" id="updateVentesModal" tabindex="-1" role="dialog" aria-labelledby="carsEditModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="addVentesModalLabel">Nouvelle Vente</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <h5 class="modal-title" id="updateEmployeeModalLabel">Modifier une voiture</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+       </button>
             </div>
             <div class="modal-body">
-                <form #addForm="ngForm" (ngSubmit)="onAddVentes(addForm)">
+                <form #editForm="ngForm">
                     <div class="form-group">
                         <label for="marque"></label>
-                        <input type="text" ngModel name="marque" class="form-control" id="marque" placeholder="Marque" required>
+                        <input type="text" ngModel="{{editCars?.marque}}" name="marque" class="form-control" id="marque" placeholder="Marque" required>
                     </div>
                     <div class="form-group">
                         <label for="modele"></label>
-                        <input type="text" ngModel name="modele" class="form-control" id="modele" placeholder="Modele" required>
+                        <input type="text" ngModel="{{editCars?.modele}}" name="modele" class="form-control" id="modele" placeholder="Modele" required>
+                    </div>
+                    <input type="hidden" ngModel="{{editCars?.id}}" name="id" class="form-control" id="id" placeholder="Email">
+                    <div class="form-group">
+                        <label for="achatprice"></label>
+                        <input type="text" ngModel="{{editCars?.achatprice}}" name="achatprice" class="form-control" id="achatprice" placeholder="Prix" required>
                     </div>
                     <div class="form-group">
-                        <label for="prix"></label>
-                        <input type="text" ngModel name="prix" class="form-control" id="prix" placeholder="Prix" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="nom"></label>
-                        <input type="text" ngModel name="nom" class="form-control" id="nom" placeholder="Nom" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="prenom"></label>
-                        <input type="text" ngModel name="prenom" class="form-control" id="prenom" placeholder="Prenom" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="phone"></label>
-                        <input type="text" ngModel name="phone" class="form-control" id="phone" placeholder="Phone" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email"></label>
-                        <input type="email" ngModel name="email" class="form-control" id="email" placeholder="Email" required>
+                        <label for="imageUrl"></label>
+                        <input type="text" ngModel="{{editCars?.imageUrl}}" name="imageUrl" class="form-control" id="imageUrl" placeholder="Image URL">
                     </div>
                     <div class="modal-footer">
-                        <button type="button" id="add-ventes-for" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Fermer</button>
-                        <button [disabled]="addForm.invalid" type="submit" class="btn btn-success btn-sm">Valider</button>
+                        <button type="button" id="" data-bs-dismiss="modal" class="btn btn-secondary btn-sm">Annuler</button>
+                        <button (click)="onUpdateVente(editForm.value)" data-bs-dismiss="modal" class="btn btn-success btn-sm">Valider</button>
                     </div>
                 </form>
             </div>
